--- a/templates/history.html
+++ b/templates/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>history</title>
+    <title>Vertical Jump Measurer</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
@@ -15,6 +15,10 @@
             flex-direction: column;
             align-items: center;
             padding-bottom: 60px;
+        }
+
+        .title {
+            color: #FFFFFF;
         }
 
         .header {
