--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,21 @@
             bottom: 10px;
         }
 
+        #historiBtn {
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            text-decoration: none;
+            margin-top: 20px; 
+        }
+
+        #historiBtn:hover {
+            background-color: lightgreen;
+        }
+
         #deleteDataBtn {
             background-color: #dc3545;
             color: #fff;
@@ -91,21 +106,63 @@
             text-align: center;
         }
 
-        tr:nth-child(odd) {
+        #data-table tbody {
+            display: flex;
+            flex-direction: column;
+            max-height: 100px; /* Sesuaikan tinggi sesuai kebutuhan */
+            overflow-y: auto;
+        }
+
+        #data-table tbody tr {
+            display: flex;
+            justify-content: space-between;
+            padding: 8px;
+            margin-bottom: 8px;
+            background-color: #ffffff; /* Warna latar belakang untuk baris */
+            border: 1px solid #000;
+        }
+
+        #data-table tbody tr:nth-child(odd) {
             background-color: #f9f9f9; /* Warna latar belakang untuk baris ganjil */
         }
 
-        /* Gaya untuk baris tabel genap */
-        tr:nth-child(even) {
+        #data-table tbody tr:nth-child(even) {
             background-color: #ffffff; /* Warna latar belakang untuk baris genap */
         }
+
+        #data-table tbody td {
+            width: 48%; /* Sesuaikan lebar sesuai kebutuhan */
+        }
+
+        /* tr:nth-child(odd) {
+            background-color: #f9f9f9; 
+        } */
+
+        /* tr:nth-child(even) {
+            background-color: #ffffff; 
+        } */
+
+        /* #data-history-table tbody {
+            display: block;
+            max-height: 200px; 
+            overflow-y: auto;
+        } */
+
+        /* #data-history-table thead, #data-history-table tbody tr {
+            display: table;
+            width: 100%;
+            table-layout: fixed;
+        } */
+
+        /* #data-history-table thead {
+            width: calc(100% - 15px);
+        }*/
 
     </style>
 </head>
 <body>
     <div class="header">
         <span class="title">VERJAS ITS</span>
-        <!-- <button id="logoutBtn" onclick="logout()">Logout</button> -->
     </div>
     
     <table id="data-table">
@@ -116,13 +173,26 @@
             </tr>
         </thead>
         <tbody>
-            
+            <!-- Hanya menampilkan 1 data terbaru -->
         </tbody>
     </table>
 
+    <!-- <table id="data-history-table">
+        <thead>
+            <tr>
+                <th>Hasil Sensor (cm)</th>
+                <th>Hasil Kamera (cm)</th>
+            </tr>
+        </thead>
+        <tbody>
+            
+        </tbody>
+    </table> -->
+
     <di class="button-container">
-        <button id="exportDataBtn" onclick="exportData()">Export Data to CSV</button>
-        <button id="deleteDataBtn" onclick="deleteData()">Delete Data</button>
+        <button id="historiBtn" onclick="tohistory()">History</button>
+        <!-- <button id="exportDataBtn" onclick="exportData()">Export Data to CSV</button>
+        <button id="deleteDataBtn" onclick="deleteData()">Delete Data</button> -->
     </di>
 
     <script>
@@ -130,15 +200,19 @@
             fetch('/get_ultrasonic_data')
             .then(response => response.json())
             .then(data => {
-                // Pastikan data sudah diurutkan berdasarkan yang paling baru
-                const sortedData = data.sort((a, b) => new Date(b.timestamp) - new Date(a.timestamp));
+                const dataTableBody = document.getElementById('data-table').getElementsByTagName('tbody')[0];
 
-                const tableBody = document.getElementById('data-table').getElementsByTagName('tbody')[0];
-                sortedData.forEach((item) => {
-                    const row = tableBody.insertRow();
+                // Hapus semua baris yang mungkin ada sebelumnya
+                while (dataTableBody.firstChild) {
+                    dataTableBody.removeChild(dataTableBody.firstChild);
+                }
+
+                const latestData = data.slice(0, 1);
+                latestData.forEach((item) => {
+                    const row = dataTableBody.insertRow();
                     const cellSensorData = row.insertCell(0);
                     const cellVisualData = row.insertCell(1);
-                    
+
                     cellSensorData.textContent = item.UltrasonicSensorData + ' cm';
                     cellVisualData.textContent = item.UltrasonicVisualData + ' cm';
                 });
@@ -146,8 +220,12 @@
             .catch(error => console.error('Error fetching ultrasonic data:', error));
         });
 
+        function tohistory() {
+            window.location.href = '/history'; 
+        }
+
         function exportData() {
-        window.location.href = '/export_data';
+            window.location.href = '/export_data';
         }
  
         function deleteData() {
