--- a/templates/index.html
+++ b/templates/index.html
@@ -51,113 +51,31 @@
             background-color: lightgreen;
         }
 
-        #deleteDataBtn {
-            background-color: #dc3545;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            margin-top: 20px; 
-        }
-        
-        #deleteDataBtn:hover {
-            background-color: #c82333;
-        }
-
-        #exportDataBtn {
-            background-color: #3498db; /* Biru cerah */
-            color: #fff; /* Teks putih untuk kontras yang baik */
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            text-decoration: none;
-            margin-top: 20px;
-        }   
-
-        #exportDataBtn:hover {
-            background-color: #2980b9; /* Biru yang sedikit lebih gelap untuk efek hover */
-        }
-
         .title {
             color: #FFFFFF;
         }
 
         table {
             width: 100%;
-            max-width: 600px; 
-            border-collapse: collapse; 
-            margin-top: 20px; 
+            max-width: 600px;
+            border-collapse: collapse;
+            margin-top: 20px;
         }
 
         th {
-            background-color: #4CAF50; 
-            color: white; 
-            text-align: center; 
-            padding: 12px; 
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 12px;
             border: 1px solid #000;
         }
 
         td {
-            border: 1px solid #000; 
-            padding: 8px; 
+            background-color: #D9D9D9;
+            border: 1px solid #000;
+            padding: 8px;
             text-align: center;
         }
-
-        #data-table tbody {
-            display: flex;
-            flex-direction: column;
-            max-height: 100px; /* Sesuaikan tinggi sesuai kebutuhan */
-            overflow-y: auto;
-        }
-
-        #data-table tbody tr {
-            display: flex;
-            justify-content: space-between;
-            padding: 8px;
-            margin-bottom: 8px;
-            background-color: #ffffff; /* Warna latar belakang untuk baris */
-            border: 1px solid #000;
-        }
-
-        #data-table tbody tr:nth-child(odd) {
-            background-color: #f9f9f9; /* Warna latar belakang untuk baris ganjil */
-        }
-
-        #data-table tbody tr:nth-child(even) {
-            background-color: #ffffff; /* Warna latar belakang untuk baris genap */
-        }
-
-        #data-table tbody td {
-            width: 48%; /* Sesuaikan lebar sesuai kebutuhan */
-        }
-
-        /* tr:nth-child(odd) {
-            background-color: #f9f9f9; 
-        } */
-
-        /* tr:nth-child(even) {
-            background-color: #ffffff; 
-        } */
-
-        /* #data-history-table tbody {
-            display: block;
-            max-height: 200px; 
-            overflow-y: auto;
-        } */
-
-        /* #data-history-table thead, #data-history-table tbody tr {
-            display: table;
-            width: 100%;
-            table-layout: fixed;
-        } */
-
-        /* #data-history-table thead {
-            width: calc(100% - 15px);
-        }*/
-
     </style>
 </head>
 <body>
@@ -173,21 +91,12 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Hanya menampilkan 1 data terbaru -->
+            <tr id="sensorData">
+                <td>---</td>
+                <td>---</td>
+            </tr>
         </tbody>
     </table>
-
-    <!-- <table id="data-history-table">
-        <thead>
-            <tr>
-                <th>Hasil Sensor (cm)</th>
-                <th>Hasil Kamera (cm)</th>
-            </tr>
-        </thead>
-        <tbody>
-            
-        </tbody>
-    </table> -->
 
     <di class="button-container">
         <button id="historiBtn" onclick="tohistory()">History</button>
@@ -196,28 +105,20 @@
     </di>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             fetch('/get_ultrasonic_data')
-            .then(response => response.json())
-            .then(data => {
-                const dataTableBody = document.getElementById('data-table').getElementsByTagName('tbody')[0];
+                .then(response => response.json())
+                .then(data => {
+                    if (data.length > 0) {
+                        const latestData = data[0];
 
-                // Hapus semua baris yang mungkin ada sebelumnya
-                while (dataTableBody.firstChild) {
-                    dataTableBody.removeChild(dataTableBody.firstChild);
-                }
-
-                const latestData = data.slice(0, 1);
-                latestData.forEach((item) => {
-                    const row = dataTableBody.insertRow();
-                    const cellSensorData = row.insertCell(0);
-                    const cellVisualData = row.insertCell(1);
-
-                    cellSensorData.textContent = item.UltrasonicSensorData + ' cm';
-                    cellVisualData.textContent = item.UltrasonicVisualData + ' cm';
-                });
-            })
-            .catch(error => console.error('Error fetching ultrasonic data:', error));
+                        document.getElementById('sensorData').innerHTML = `
+                            <td>${latestData.UltrasonicSensorData}</td>
+                            <td>${latestData.UltrasonicVisualData}</td>
+                        `;
+                    }
+                })
+                .catch(error => console.error('Error fetching ultrasonic data:', error));
         });
 
         function tohistory() {
