--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
         }
 
         #historiBtn {
+            font-size: 20px;
             background-color: #4CAF50;
             color: #fff;
             border: none;
@@ -57,12 +58,13 @@
 
         table {
             width: 100%;
-            max-width: 600px;
+            max-width: 700px;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 100px;
         }
 
         th {
+            font-size: 20px;
             background-color: #4CAF50;
             color: white;
             text-align: center;
@@ -71,6 +73,7 @@
         }
 
         td {
+            font-size: 170px;
             background-color: #D9D9D9;
             border: 1px solid #000;
             padding: 8px;
