--- a/templates/history.html
+++ b/templates/history.html
@@ -156,7 +156,7 @@
         </tbody>
     </table>
 
-    <h3>*Data diurutkan dari yang pertama hingga yang terakhir</h3>
+    <h3>*Data diurutkan dari awal hingga yang terakhir</h3>
 
     <di class="button-container">
         <button id="kembaliBtn" onclick="toindex()">Back</button>
